Mise à jour animations + compteur visiteurs

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
 <div class="hero">
 
     <div class="slogan-box">
-        <h1>Donnez de la hauteur à vos événements</h1>
+        <h1>Donnez de la hauteur à vos événements !</h1>
     </div>
 
     <a href="site.html" class="discover">Découvrir</a>
