--- a/site.html
+++ b/site.html
@@ -1006,7 +1006,7 @@ document.querySelectorAll(".card-box").forEach(card => {
 </script>
 
 <div id="visitor-counter">
-Visiteurs <span
+Visiteur <span
 id="visitor-number">0</span>
 </div>
 
@@ -1016,7 +1016,7 @@ const counterEl =
 document.getElementyById("visitor-number");
 
 let count =
-localStorage.getItem("vgm_visits",visits);
+localStorage.getItem("vgm_visits");
 
 
 if (!count === null) {
