ajout de vidéo en hover + nouvelle photo de santa jack

--- a/site.html
+++ b/site.html
@@ -52,28 +52,31 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 <div class="cards">
 
 <div class="card card-box reveal">
+     <img src="images/costumes/robot_geant.jpg" class="card-image" />
+     <video src="videos/costumes/robot_geant.mp4" class="card-video" muted loop autoplay></video>
+     <h3>Robot Géant</h3>
+     <div class="details">
+	Gardien métallique venu des étoiles, ce robot géant incarne force et protection. Imposant mais accessible, il impressionne toutes les générations grâce à son allure héroïque et son énergie inspirante.</div></div>
+
+
+<div class="card card-box reveal">
     <div class="media-wrapper"></div>
      <img src="images/costumes/le_devoreur_de_monde.jpg" class="card-image" />
-     <video src="videos/le_devoreur_de_monde.mp4" class="card-video" muted loop autoplay></video>
+     <video src="videos/costumes/le_devoreur_de_monde.mp4" class="card-video" muted loop autoplay></video>
      <h3>Le dévoreur de Monde</h3>
      <div class="details">
 	Colosse venu des confins de l'univers, ce personnage impose par son aura cosmique. Puissant mais toujours bienveillant avec le public, il ne laisse personne indifférent.</div></div>
 
 <div class="card card-box reveal">
-     <img src="images/costumes/robot_geant.jpg" class="card-image" />
-     <video src="videos/robot_geant.mp4" class="card-video" muted loop autoplay></video>
-     <h3>Robot Géant</h3>
-     <div class="details">
-	Gardien métallique venu des étoiles, ce robot géant incarne force et protection. Imposant mais accessible, il impressionne toutes les générations grâce à son allure héroïque et son énergie inspirante.</div></div>
-
-<div class="card card-box reveal">
      <img src="images/costumes/renard_a_9_queues.jpg">
+     <video src="videos/costumes/renard_a_9_queues.mp4" class="card-video" muted loop autoplay></video>
      <h3>Renard à neuf queues</h3>
      <div class="details">
 	Créature mystique venue des légendes d'Orient, ce renard à neuf queues fascine par son élégance et sa puissance. Un personnage visuellement spectaculaire, apprécié des enfants comme des adultes.</div></div>
 
 <div class="card card-box reveal">
      <img src="images/costumes/le_slenderman.jpg">
+     <video src="videos/costumes/le_slenderman.mp4" class="card-video" muted loop autoplay></video>
      <h3>Slenderman</h3>
      <div class="details">
 	« L'Homme Sans Visage >> Silhouette élancée venue des ombres, Slenderman impressionne</div></div>
@@ -98,6 +101,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/dieu_de_la_mort.jpg">
+     <video src="videos/costumes/dieu_de_la_mort.mp4" class="card-video" muted loop autoplay></video>
      <h3>Dieu de la Mort</h3>
      <div class="details">
 	Figure majestueuse entre le monde des vivants et celui des esprits, ce personnage veille dans un silence solennel. Une présence forte, intrigante, mais toujours adaptée au tout public.</div></div>
@@ -119,6 +123,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/bao.jpg">
+     <video src="videos/costumes/bao.mp4" class="card-video" muted loop autoplay></video>
      <h3>Bao – Lion chinois</h3>
      <div class="details">
 	Avec sa danse colorée et son énergie communicative, Bao apporte chance et joie là où il passe. Une animation vibrante, parfaite pour les événements festifs.</div></div>
