ajout de 2 videos hover

--- a/site.html
+++ b/site.html
@@ -83,6 +83,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/halloween_jack.jpg">
+     <video src="videos/costumes/halloween_jack.mp4" class="card-video" muted loop autoplay></video>
      <h3>Halloween Jack</h3>
      <div class="details">
 	Avec son sourire citrouille et son air espiègle, Halloween Jack incarne l'esprit malicieux d'octobre. Un personnage parfait pour des animations festives et amusantes.</div></div>
@@ -95,6 +96,7 @@ Découvrez notre collection de costumes uniques et spectaculaires, conçus pour 
 
 <div class="card card-box reveal">
      <img src="images/costumes/le_prince_des_cauchemars.jpg">
+     <video src="videos/costumes/le_prince_des_cauchemars.mp4" class="card-video" muted loop autoplay></video>
      <h3>Prince des Cauchemars</h3>
      <div class="details">
 	Majestueuse figure des nuits agitées, le Prince des Cauchemars règne sur un royaume où l'imaginaire prend vie. Impressionnant mais jamais effrayant, il apporte une ambiance mystérieuse et captivante, parfaite pour les événements à thème fantastique ou Halloween.</div></div>
