maj code scroll verison mobile

--- a/site.html
+++ b/site.html
@@ -16,7 +16,7 @@
     <nav id="menu">
     <a href="#costumes">Costumes</a>
     <a href="#prestations">Prestations</a>
-    <a href="#animation">Animations Micro</a>
+    <a href="#animation">Animation Micro</a>
     <a href="#ateliers">Ateliers</a>
     <a href="#salons">Salons</a>
     <a href="#collaboration">Collaboration</a>
